--- a/src/RestaurantManagementSystem/view/login.fxml
+++ b/src/RestaurantManagementSystem/view/login.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="food_system.controller.LoginController">
+<AnchorPane prefHeight="200.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RestaurantManagementSystem.controller.LoginController">
    <children>
       <TextField fx:id="account" layoutX="113.0" layoutY="60.0" />
       <PasswordField fx:id="password" layoutX="113.0" layoutY="99.0" />
