--- a/src/RestaurantManagementSystem/view/order.fxml
+++ b/src/RestaurantManagementSystem/view/order.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="food_system.controller.OrderController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RestaurantManagementSystem.controller.OrderController">
    <children>
        <Button layoutX="39.0" layoutY="80.0" mnemonicParsing="false" onAction="#toMainView" prefHeight="23.0" prefWidth="63.0" text="Main" textAlignment="CENTER" />
        <Button layoutX="39.0" layoutY="130.0" mnemonicParsing="false" onAction="#toMaterialView" prefHeight="23.0" prefWidth="63.0" text="Material" textAlignment="CENTER" />
@@ -27,8 +27,9 @@
       <Button layoutX="185.0" layoutY="338.0" mnemonicParsing="false" onAction="#update" text="Edit" />
        <Button layoutX="239.0" layoutY="338.0" mnemonicParsing="false" onAction="#delete" text="Delete" />
       <Button layoutX="307.0" layoutY="338.0" mnemonicParsing="false" onAction="#refresh" text="Refresh" />
-      <TextField fx:id="Search" layoutX="386.0" layoutY="44.0" onAction="#search" prefHeight="23.0" prefWidth="127.0" />
+      <TextField fx:id="search" layoutX="386.0" layoutY="44.0" prefHeight="23.0" prefWidth="127.0" />
       <Label layoutX="334.0" layoutY="48.0" text="Search:" />
-      <Button layoutX="518.0" layoutY="44.0" mnemonicParsing="false" onAction="#update" text="🔍" />
+      <Button layoutX="518.0" layoutY="44.0" mnemonicParsing="false" onAction="#search" text="🔍" />
+      <Button layoutX="502.0" layoutY="338.0" mnemonicParsing="false" onAction="#update" text="Print" />
    </children>
 </AnchorPane>
