--- a/src/RestaurantManagementSystem/view/main.fxml
+++ b/src/RestaurantManagementSystem/view/main.fxml
@@ -12,9 +12,14 @@
       <Button layoutX="39.0" layoutY="180.0" mnemonicParsing="false" onAction="#toOrderView" prefHeight="23.0" prefWidth="63.0" text="Order" textAlignment="CENTER" />
       <Button layoutX="39.0" layoutY="230.0" mnemonicParsing="false" onAction="#toMenuView" prefHeight="23.0" prefWidth="63.0" text="Menu" textAlignment="CENTER" />
       <Button layoutX="39.0" layoutY="280.0" mnemonicParsing="false" onAction="#toReviewView" prefHeight="23.0" prefWidth="63.0" text="Review" textAlignment="CENTER" />
-      <Label alignment="TOP_LEFT" layoutX="127.0" layoutY="36.0" prefHeight="327.0" prefWidth="442.0" text="  Welcome!">
+      <Label alignment="TOP_LEFT" layoutX="127.0" layoutY="61.0" prefHeight="52.0" prefWidth="247.0" text="  Welcome!">
          <font>
-            <Font size="21.0" />
+            <Font size="26.0" />
+         </font>
+      </Label>
+      <Label alignment="TOP_LEFT" layoutX="197.0" layoutY="110.0" prefHeight="99.0" prefWidth="353.0" text="Restaurant Management System">
+         <font>
+            <Font size="20.0" />
          </font>
       </Label>
    </children>
