--- a/src/RestaurantManagementSystem/view/material.fxml
+++ b/src/RestaurantManagementSystem/view/material.fxml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="RestaurantManagementSystem.controller.MaterialController"
-            prefHeight="400.0" prefWidth="600.0">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="RestaurantManagementSystem.controller.MaterialController">
     <children>
         <Button layoutX="39.0" layoutY="80.0" mnemonicParsing="false" onAction="#toMainView" prefHeight="23.0" prefWidth="63.0" text="Main" textAlignment="CENTER" />
         <Button layoutX="39.0" layoutY="130.0" mnemonicParsing="false" onAction="#toMaterialView" prefHeight="23.0" prefWidth="63.0" text="Material" textAlignment="CENTER" />
         <Button layoutX="39.0" layoutY="180.0" mnemonicParsing="false" onAction="#toOrderView" prefHeight="23.0" prefWidth="63.0" text="Order" textAlignment="CENTER" />
         <Button layoutX="39.0" layoutY="230.0" mnemonicParsing="false" onAction="#toMenuView" prefHeight="23.0" prefWidth="63.0" text="Menu" textAlignment="CENTER" />
         <Button layoutX="39.0" layoutY="280.0" mnemonicParsing="false" onAction="#toReviewView" prefHeight="23.0" prefWidth="63.0" text="Review" textAlignment="CENTER" />
-        <Button layoutX="39.0" layoutY="280.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="63.0" text="Review" textAlignment="CENTER" />
-        <TableView fx:id="orderTable" layoutX="131.0" layoutY="80.0" prefHeight="239.0" prefWidth="415.0">
+        <TableView fx:id="materialTable" layoutX="131.0" layoutY="80.0" prefHeight="239.0" prefWidth="415.0">
             <columns>
-                <TableColumn fx:id="orderNo" prefWidth="63" text="No" />
-                <TableColumn fx:id="orderContent" minWidth="0.0" prefWidth="205" text="Content" />
-                <TableColumn fx:id="orderPrice" prefWidth="52" text="Price" />
-                <TableColumn fx:id="orderDate" minWidth="0.0" prefWidth="92" text="Date" />
+                <TableColumn fx:id="materialNo" prefWidth="60" text="No" />
+                <TableColumn fx:id="materialName" minWidth="0.0" prefWidth="85" text="Name" />
+                <TableColumn fx:id="materialUnitPrice" prefWidth="60" text="UnitPrice" />
+                <TableColumn fx:id="materialNumber" minWidth="0.0" prefWidth="60" text="Number" />
+                <TableColumn fx:id="materialDate" prefWidth="80" text="Date" />
+                <TableColumn fx:id="materialType" minWidth="0.0" prefWidth="72" text="Type" />
             </columns>
         </TableView>
         <Button layoutX="131.0" layoutY="338.0" mnemonicParsing="false" onAction="#insert" text="Add" />
         <Button layoutX="185.0" layoutY="338.0" mnemonicParsing="false" onAction="#update" text="Edit" />
         <Button layoutX="239.0" layoutY="338.0" mnemonicParsing="false" onAction="#delete" text="Delete" />
         <Button layoutX="307.0" layoutY="338.0" mnemonicParsing="false" onAction="#refresh" text="Refresh" />
-        <TextField fx:id="Search" layoutX="386.0" layoutY="44.0" onAction="#search" prefHeight="23.0" prefWidth="127.0" />
+        <TextField fx:id="search" layoutX="386.0" layoutY="44.0" onAction="#search" prefHeight="23.0" prefWidth="127.0" />
         <Label layoutX="334.0" layoutY="48.0" text="Search:" />
-        <Button layoutX="518.0" layoutY="44.0" mnemonicParsing="false" onAction="#update" text="🔍" />
-        <Button layoutX="502.0" layoutY="338.0" mnemonicParsing="false" onAction="#update" text="Print" />
+        <Button layoutX="518.0" layoutY="44.0" mnemonicParsing="false" onAction="#search" text="🔍" />
+        <Button layoutX="502.0" layoutY="338.0" mnemonicParsing="false" onAction="#print" text="Print" />
     </children>
 </AnchorPane>
