--- a/src/RestaurantManagementSystem/view/order.fxml
+++ b/src/RestaurantManagementSystem/view/order.fxml
@@ -14,7 +14,6 @@
        <Button layoutX="39.0" layoutY="180.0" mnemonicParsing="false" onAction="#toOrderView" prefHeight="23.0" prefWidth="63.0" text="Order" textAlignment="CENTER" />
        <Button layoutX="39.0" layoutY="230.0" mnemonicParsing="false" onAction="#toMenuView" prefHeight="23.0" prefWidth="63.0" text="Menu" textAlignment="CENTER" />
        <Button layoutX="39.0" layoutY="280.0" mnemonicParsing="false" onAction="#toReviewView" prefHeight="23.0" prefWidth="63.0" text="Review" textAlignment="CENTER" />
-       <Button layoutX="39.0" layoutY="280.0" mnemonicParsing="false" prefHeight="23.0" prefWidth="63.0" text="Review" textAlignment="CENTER" />
       <TableView fx:id="orderTable" layoutX="131.0" layoutY="80.0" prefHeight="239.0" prefWidth="415.0">
         <columns>
           <TableColumn fx:id="orderNo" prefWidth="63" text="No" />
@@ -30,6 +29,6 @@
       <TextField fx:id="search" layoutX="386.0" layoutY="44.0" prefHeight="23.0" prefWidth="127.0" />
       <Label layoutX="334.0" layoutY="48.0" text="Search:" />
       <Button layoutX="518.0" layoutY="44.0" mnemonicParsing="false" onAction="#search" text="🔍" />
-      <Button layoutX="502.0" layoutY="338.0" mnemonicParsing="false" onAction="#update" text="Print" />
+      <Button layoutX="502.0" layoutY="338.0" mnemonicParsing="false" onAction="#print" text="Print" />
    </children>
 </AnchorPane>
